[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/city_icon_feame2.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/city_icon_feame1.png" type="Texture" id=4]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/HScrollBar.tres" type="Theme" id=5]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/city_icon_feame3.png" type="Texture" id=6]
[ext_resource path="res://assets/images/iconslocations/aliron_ic2.png" type="Texture" id=7]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Panel_Square.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/button_reputationshop.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/button_reputationshop_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/button_reputationshop_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/home_normal.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/map_normal.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/home_hover.png" type="Texture" id=14]
[ext_resource path="res://assets/Themes_v2/travel_new/SelectorPanel.tres" type="StyleBox" id=15]
[ext_resource path="res://gui_modules/Universal/Scripts/NavigationModule.gd" type="Script" id=16]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=17]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_32_outline.tres" type="DynamicFont" id=18]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/city_icon_feame_mask.png" type="BitMap" id=19]
[ext_resource path="res://assets/Textures_v2/map_hover.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/home_pressed.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/map_pressed.png" type="Texture" id=22]

[node name="NavigationModule" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 320.0
margin_top = 15.0
margin_right = -150.0
margin_bottom = -961.0
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 16 )

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavigationContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 106.0
margin_top = -2.0
margin_bottom = 1.0
theme = ExtResource( 5 )
scroll_vertical_enabled = false

[node name="AreaSelection" type="HBoxContainer" parent="NavigationContainer"]
custom_constants/separation = -2

[node name="Button" type="TextureButton" parent="NavigationContainer/AreaSelection"]
visible = false
margin_right = 214.0
margin_bottom = 107.0
rect_min_size = Vector2( 214, 107 )
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 3 )
texture_click_mask = ExtResource( 19 )

[node name="icon" type="TextureRect" parent="NavigationContainer/AreaSelection/Button"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -40.0
margin_right = 92.0
margin_bottom = 40.0
texture = ExtResource( 7 )
expand = true

[node name="amount" type="Label" parent="NavigationContainer/AreaSelection/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 95.0
margin_top = 46.0
margin_right = -16.0
margin_bottom = -8.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 18 )
text = "2/2"
align = 2
valign = 1

[node name="drop_list" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 103.0
margin_bottom = 52.0
hint_tooltip = "LOCATIONLIST"
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 21 )
texture_hover = ExtResource( 12 )
stretch_mode = 5

[node name="screen" type="Button" parent="drop_list"]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -355.0
margin_top = -47.0
margin_right = 1594.0
margin_bottom = 1058.0

[node name="Panel" type="Panel" parent="drop_list"]
visible = false
margin_left = -2.0
margin_top = 97.0
margin_right = 472.0
margin_bottom = 807.0
custom_styles/panel = ExtResource( 15 )

[node name="NavigationContainer" type="ScrollContainer" parent="drop_list/Panel"]
margin_left = 21.0
margin_top = 16.0
margin_right = 452.0
margin_bottom = 691.0
theme = ExtResource( 17 )
scroll_horizontal_enabled = false

[node name="AreaSelection" type="VBoxContainer" parent="drop_list/Panel/NavigationContainer"]
margin_right = 431.0
size_flags_horizontal = 3
custom_constants/separation = -2

[node name="Button" type="TextureButton" parent="drop_list/Panel/NavigationContainer/AreaSelection"]
visible = false
margin_right = 431.0
margin_bottom = 60.0
rect_min_size = Vector2( 214, 60 )
size_flags_horizontal = 3
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
expand = true

[node name="icon" type="TextureRect" parent="drop_list/Panel/NavigationContainer/AreaSelection/Button"]
margin_left = 6.0
margin_top = 7.0
margin_right = 114.0
margin_bottom = 54.0
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="drop_list/Panel/NavigationContainer/AreaSelection/Button"]
anchor_right = 1.0
margin_left = 122.0
margin_top = 2.0
margin_right = -6.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
text = "Mansion - 8/8"
valign = 1

[node name="travelbutton" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 52.0
margin_right = 103.0
margin_bottom = 102.0
hint_tooltip = "LOCATIONLIST"
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 13 )
stretch_mode = 5
